...
  FIRST_NAME_STRING: "First Name",
  LAST_NAME_STRING: "Last Name",
  Last_name: "Last Name",
  COUNTRY_OF_RESI_STRING: "Country of residence",
  SELECT_STRING: "Select",
  ACCEPT_STRING: "I accept the",
  PP_STRING: "Privacy Policy",
  EULG_STRING: "End User License Agreement",
  FORGOT_PASS_STRING: "Forgot Password?",
  SHOW: "SHOW",
  HIDE: "HIDE",
  DONE_STRING: "DONE",
  ARE_YOU_READY:
    "As you have already registered an account for ENTERTAINER, simply enter the same email and password below to continue.",
...
  NO_FAV: "You haven’t favourite anything ",
  FAV_EXPLAIN: "Be sure to fill it with something you like",
  DONE: "DONE",
  SAVED_THIS_YEAR: "SAVED THIS YEAR",
  OFFERS_USED_SO_FAR: "OFFERS USED SO FAR",
  FEATURED: "Featured",
  GOT_IT: "Ok, I’ve got it!",
  COMPUTED: "computed",
  SELECT_LOCATION:
    "First you need to select which location you want to see amazing offers in! You can change locations from this home screen any time.",
  WELCOME_MESSAGE: "welcome guest",
  Welcome: "Welcome",
  status: {
    foryou: "Done Temp",
    default: "default",
  },
  SAVINGS: "Savings",
  MONTHLY: "MONTHLY",
  YEARLY: "YEARLY",
  Savings_History: "Savings History",
  Outlet_Details: "Outlet Details",
  Location: "Location:",
  Mall: "Mall",
  Area: "Area",
  Distance: "Distance",
  Other_Location: "Other Location",
...
  Email: "Email",
  Your_Estimated_Savings: "Your Estimated Savings",
  "Please ask Cafe Society to enter their PIN":
    "Please ask Cafe Society to enter their PIN",
  VALID_TO: "Valid to",
  Offers_are_subject_to: "Offers are subject to",
  "Rules of Use": "Rules of Use",
  "Redemption Completed": "Redemption Completed",
  Done: "Done",
  FOR_YOU: "This is for you",
  APP_OFFERING:
    "This app will offer you thousands of 2-for-1 and discount offers for to you enjoy whether during your break or time off with family and friends.",
  CLEAR: "CLEAR",
...
  All: "All",
  Map: "Map",
  List: "List",
  Sorry_no_result_found: "Sorry no result found",
  Consider_broadening_your_filters: "Consider broadening your filters",
  "Search by name, places & more…": "Search by name, places & more…",
  Cancel: "Cancel",
  Quick_search_by_name_or_key: "Quick search by name or key...",
  TOTAL_OFFERS_REDEEMED: "Total offers redeemed in",
  EXPLAIN: "Your redemptions will appear here as \n you use offers in the app.",
  NO_REDEMPTION: "NO REDEMPTIONS YET",
  REDEMPTIONS: "REDEMPTIONS",
  PREFERENCES: "Preferences",
  EDIT_ACCOUNT: "EDIT ACCOUNT",
  "EDIT ACCOUNT": "EDIT ACCOUNT",
  "My Account": "My Account",
  Subscription: "Subscription",
  "Manage Subscription": "Manage Subscription",
  "Reset Password": "Reset Password",
  "My History": "My History",
  Redemption_History: "Redemption History",
  "Help & Support": "Help & Support",
  "Help & Live Chat": "Help & Live Chat",
  Instructions: "Instructions",
  About: "About",
  "Rate Our App": "Rate Our App",
  "App Version": "App Version",
  SIGN_OUT: "SIGN OUT",
  Sign_Out: "Sign Out",
  "My Information": "My Information",
...
  Add_Name: "Add Name",
  Enter_Details: "Enter Details",
  Something_went_wrong: "Something went wrong",
  "Do You want to delete this": "Do You want to delete this",
  "Please Select Location Tag": "Please Select Location Tag",
  "Search your location": "Search your location",
  Order_History: "Order History",
  Order_Status: "Order Status",
  No_Order_Text: "You haven’t placed any orders yet.",
  Total_Deliveries: "Total deliveries in",
  Edit_Order: "Edit Order",
  Cancel_Order: "Cancel Order",
  "Category not exists": "Category not exists",
...
  Sorry_we_need_camera_roll_permissions_to_make_this_work:
    "Sorry we need camera roll permissions to make this work",
  SSL_ERROR: "Something went wrong.\nPlease update your app to latest version.",
  Explore_all_greate_offers_near_you: "Explore all the great offers near you",
  We_use_your_location_to_serve_the_top_offers_around_you:
    "We'll use your location to serve the top offers around you.",
  "Delete Account": "Delete Account",
  "Are you sure you want to delete your account? All of you data will be permanently deleted, and you will be logged out.":
    "Are you sure you want to delete your account? All of you data will be permanently deleted, and you will be logged out.",
  Deliver_to: "Deliver to",
  Sorry_this_outlet_is_unable_to_deliver:
    "Sorry, this outlet is unable to deliver at this chosen time/location.",
  Cuisines: "Cuisines",
...
  "Rule of Use": "Rule of Use",
  locations: "locations",
  would_delete_all_your_information_with_Us:
    "Deleting your account would delete all your information with Us",
  Save: "Save",
  "Onboarding Walkthrough": "Onboarding Walkthrough",
  Help: "Help",
  Filters: "Filters",
  Top_Rated: "Top Rated",
  Reusable: "Reusable",
  "Hey, I hear good things about this outlet":
    "Hey, I hear good things about this outlet",
  "I found on": "I found on",
...
